finished math quiz

--- a/MathQuiz/Form1.resx
+++ b/MathQuiz/Form1.resx
@@ -117,4 +117,84 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAACMuAAAjLgAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQEBAYEBAQGBAQEBgQEBAYFBQUGBgYGBgYG
+        BgYHBwcGBwcHBgcHBwYHBwcGBwcHBggICAYHBwcGBwcHBggICAYHBwcGBwcHBggICAYICAgGCQkJBggI
+        CAYICAgGCAgIBggICAYJCQkGCQkJBgkJCQYJCQkGCQkJBgoKCgYJCQkGBAQEtgQEBLYEBAS2BQUFtgUF
+        BbYFBQW2BgYGtgYGBrYGBga2BgYGtgcHB7YHBwe2BwcHtgcHB7YHBwe2BwcHtgcHB7YHBwe2CAgItggI
+        CLYICAi2CAgItggICLYICAi2CAgItggICLYJCQm2CQkJtgkJCbYJCQm2CQkJtgkJCbYEBAT/BAQE/wQE
+        BP8FBQX/BQUF/wUFBf8GBgb/BgYG/wYGBv8GBgb/BgYG/wcHB/8HBwf/BwcH/wcHB/8HBwf/BwcH/wgI
+        CP8ICAj/CAgI/wgICP8ICAj/CAgI/wgICP8ICAj/CAgI/wgICP8ICAj/CAgI/wkJCf8JCQn/CQkJ/wQE
+        BP8EBAT/BAQE/wUFBf8FBQX/BQUF/wUFBf8GBgb/BgYG/wYGBv8GBgb/BgYG/wcHB/8HBwf/BwcH/wcH
+        B/8IBwf/CAcH/wgICP8ICAj/CAgI/wgICP8ICAj/CAgI/wgICP8ICAj/CAgI/wgICP8ICAj/CAgI/wgI
+        CP8ICAj/BAQE/wQEBP8EBAT/BAQE/wUFBf8FBQX/BQUF/wYGBv8GBgb/BgYG/wYGBv8GBgb/BwcH/wcH
+        B/8HBwf/BwYF/wgMDf8JExb/CQsL/wkLC/8JCAj/CAgI/wgICP8ICAj/CAgI/wgICP8ICAj/CAgI/wgI
+        CP8ICAj/CAgI/wgICP8EBAT/BAQE/wQEBP8FBQX/BQUF/wUFBf8FBQX/BgYG/wYGBv8GBgb/BgYG/wcH
+        B/8HBwf/BwcG/wgMDv8JJzP/Ck1k/w2Hrv8JUGz/CEJa/woMDf8JCwv/CAgI/wgICP8ICAj/CAgI/wgI
+        CP8ICAj/CAgI/wgICP8ICAj/CAgI/wQEBP8EBAT/BAQE/wUFBf8FBQX/BQUF/wUFBf8GBgb/BgYG/wYG
+        Bv8GBgb/BwcH/wcHB/8HBwf/Bxgf/wZWeP8IYYr/B6Dc/wN8tP8GY43/CGB+/wo8TP8JBwf/CAgI/wgI
+        CP8ICAj/CAgI/wgICP8ICAj/CAgI/wgICP8HBwf/BAQE/wQEBP8EBAT/BQUF/wUFBf8FBQX/BQUF/wYG
+        Bv8GBgb/BgYG/wcGBf8HBQT/BgUF/wYNEP8GNU3/BVyL/wVfkv8Gisv/A4HC/wSU0f8Fib//CkZd/wkJ
+        Cf8ICAj/CAgI/wgICP8ICAj/CAgI/wgICP8ICAj/CAgI/wgICP8EBAT/BAQE/wQEBP8EBAT/BQUF/wUF
+        Bf8FBQX/BgUF/wYHB/8HCQr/CTpG/wgzQP8HHSf/Bz5V/waJvP8Fks7/B3Gv/wxwrf8Jis7/A5ne/wSE
+        vv8IXYH/Cik1/wgHB/8ICAj/CAgI/wcHB/8HBwf/BwcH/wgICP8ICAj/CAgI/wQEBP8EBAT/BAQE/wQE
+        BP8FBQX/BQUF/wUFBf8FBgb/BhAT/whAU/8IZYX/BmKF/wVMbf8EaJP/DKHY/xCl3/8KU4P/DzlZ/w5h
+        kv8KkNX/Cp7a/waaz/8KOEj/CAYF/wgICP8ICAj/BwcH/wcHB/8HBwf/BwcH/wcHB/8HBwf/BAQE/wQE
+        BP8EBAT/BAQE/wQEBP8FBQX/BQQE/wUNEP8HPVD/BlFv/wZdhf8DQWb/Az1g/wWArv8Uqdf/H67e/wlN
+        d/8MJkD/DFaH/wiO0v8PquX/C6HP/wkmL/8IBgb/CAgI/wgICP8HBwf/BwcH/wgICP8HBwf/CAgI/wcH
+        B/8EBAT/BAQE/wQEBP8EBAT/BQUF/wUFBf8FBAT/BAsO/wZUcv8FaJL/B0No/wpDbv8GLEz/A0Bf/xey
+        4f8mx/j/E6HX/whwpP8Kjcn/Bo/P/wiVzv8LXXr/CA8R/wgHB/8HBwf/BwcH/wcHB/8HBwf/BwcH/wcH
+        B/8HBwf/BwcH/wQEBP8EBAT/BAQE/wQEBP8EBAT/BAQE/wQDAv8EGB//BWuN/wRmjf8HHjP/DTda/ws6
+        Yv8EIDj/B2iS/w+f1P8Wtuz/B4zH/wqa0v8GcaL/Bkxu/wgcJ/8IBgb/BwcH/wcHB/8HBwf/BwcH/wcH
+        B/8HBwf/BwcH/wcHB/8HBwf/BAQE/wQEBP8EBAT/BAQE/wQEBP8EBAT/AwMD/wIGB/8DKjv/AzdR/wQR
+        HP8IGiz/CTRW/wQnQ/8EJT7/BmWO/wVij/8EVoX/BWmb/whXef8ICw3/BwcG/wcHB/8HBwf/BwcH/wcH
+        B/8HBwf/BwcH/wcHB/8HBwf/BwcH/wcHB/8EBAT/BAQE/wQEBP8EBAT/BAQE/wQEBP8EBAT/AwIC/wMa
+        I/8EUG3/A2CF/wQ5V/8FOlr/BWOO/wVljP8FcqD/B0t4/wk4Xv8ER3b/BURm/wghK/8HBwb/BwcH/wcH
+        B/8HBwf/BwcH/wcHB/8HBwf/BwcH/wcHB/8HBwf/BwcH/wQEBP8EBAT/BAQE/wQEBP8EBAT/BAQE/wMD
+        A/8CAgL/AgUH/wRDV/8ERV7/BT1Z/wQpPf8GWXn/B4ix/w6v5f8NZJT/C0dw/wZil/8EZJH/CDRG/wcG
+        Bv8HBwf/BwcH/wcHB/8HBwf/BwcH/wcHB/8HBwf/BwcH/wcHB/8HBwf/AwMD/wQEBP8EBAT/BAQE/wQE
+        BP8EBAT/AwMD/wMDA/8CAwP/AwYI/wMHCf8EDxX/AwoP/wMKDv8GSV//FbLi/x236v8OmdD/BYS6/whu
+        lP8IFBj/BwYG/wcHB/8HBwf/BwcH/wcHB/8HBwf/BwcH/wcHB/8GBgb/BgYG/wYGBv8DAwP/AwMD/wQE
+        BP8EBAT/AwMD/wMDA/8DAwP/AwMD/wMDA/8DAwP/AwMD/wQDA/8DAwL/AgEA/wMKDf8JW3X/DoGp/wyZ
+        xv8GVHb/CCs4/wcMDf8HBwb/BwcH/wcHB/8HBwf/BwcH/wYGBv8GBgb/BgYG/wYGBv8GBgb/BgYG/wMD
+        A/8DAwP/AwMD/wMDA/8DAwP/AwMD/wMDA/8DAwP/AwMD/wQEBP8EBAT/BAQE/wQEBP8DAwP/AgIC/wMG
+        B/8EEBX/Bh0l/wcWHf8HBQT/BwcG/wcHB/8GBgb/BwcH/wcHB/8HBwf/BgYG/wYGBv8GBgb/BgYG/wYG
+        Bv8GBgb/AwMD/wMDA/8DAwP/AwMD/wMDA/8DAwP/AwMD/wMDA/8EBAT/BAQE/wQEBP8EBAT/BAQE/wQE
+        BP8EBAT/BAQE/wUEBP8FBAT/BgUF/wYGBv8GBgb/BwcH/wYGBv8HBwf/BgYG/wYGBv8GBgb/BgYG/wYG
+        Bv8GBgb/BgYG/wYGBv8DAwP/AwMD/wMDA/8DAwP/AwMD/wMDA/8DAwP/BAQE/wQEBP8EBAT/BAQE/wQE
+        BP8EBAT/BAQE/wUFBf8FBQX/BQUF/wYGBv8GBgb/BgYG/wYGBv8GBgb/BgYG/wYGBv8GBgb/BgYG/wYG
+        Bv8GBgb/BgYG/wYGBv8GBgb/BgYG/wMDA/8DAwP/AwMD/wMDA/8DAwP/AwMD/wQEBP8DAwP/AwMD/wQE
+        BP8EBAT/BAQE/wQEBP8FBQX/BQUF/wUFBf8FBQX/BgYG/wYGBv8GBgb/BgYG/wYGBv8GBgb/BgYG/wYG
+        Bv8GBgb/BgYG/wYGBv8GBgb/BgYG/wYGBv8GBgb/AwMDnAMDA5wDAwOcAwMDnAMDA5wDAwOcAwMDnAQE
+        BJwEBAScBAQEnAQEBJwEBAScBAQEnAUFBZwFBQWcBgYGnAYGBpwGBgacBgYGnAYGBpwGBgacBgYGnAYG
+        BpwGBgacBgYGnAYGBpwGBgacBgYGnAYGBpwGBgacBgYGnAYGBpwAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/////////////////////wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA//////////////////////////8=
+</value>
+  </data>
 </root>
